--- a/package.json
+++ b/package.json
@@ -10,25 +10,40 @@
     "format": "prettier --write app/ components/ "
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/ssr": "^0.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^12.4.11",
     "ioredis": "^5.5.0",
     "lucide-react": "^0.475.0",
     "next": "15.2.0-canary.56",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
+    "sonner": "^1.7.4",
+    "supabase": "^2.15.8",
     "swr": "^2.3.2",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,6 +51,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "emoji-mart": "^5.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0-canary.56",
     "prettier": "3.5.1",
